<!--
  ~ Copyright September20.2019 ChouaibBELILITA. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Pharmacie</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="nss">Numero securite sociale</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrdold">Entrer ancien mot de passe</string>
    <string name="passowrdnew">Entrer un nouveau mot de passe</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="firstName">Prenom</string>
    <string name="lastName">Nom</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Adresse</string>
    <string name="confirmPassword">Confirmer mot de passe</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="confirm">Confirmer</string>
    <string name="signUp">SIGN UP</string>
    <string name="signUpconfirm">Changer mot de passe</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="lienfb">Lien Facebook de la pharmacie : &#160;</string>
    <string name="adressepharmacie">Ladresse du pharmacie :</string>
    <string name="convention">Convention :</string>
    <string name="numtelpharmacie">Numero de Tel de la Pharmacie :</string>
    <string name="ville">Ville:</string>
    <string name="heureouverture">L heure d ouverture:</string>
    <string name="heurefermeture">L heure de fermeture :</string>
    <string name="localisation">Localisaion de la pharmacie :</string>
    <string name="bonjour">Bonjour</string>
    <string name="exc">!!</string>
    <string name="A2">L etat de votre commande est</string>
    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">AIzaSyDwVyiU4EycVlqzfIiNTJkgcIABCis_xq8</string>
    <string name="title_activity_maps">Les plus proches pharmacies</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a  place</string>
</resources>
