<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright September20.2019 ChouaibBELILITA. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:background="@drawable/background"
              android:padding="20dp"
              tools:context=".Main4Activity">
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/signUpconfirm"
            android:textColor="@color/white_greyish"
            android:textSize="25sp"
            android:textStyle="bold" />
    <EditText
            android:id="@+id/passwordold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/passowrdold"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />
    <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />
    <EditText
              android:id="@+id/passwordnew"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="5dp"
              android:background="@android:color/transparent"
              android:drawableLeft="@drawable/confirm_password"
              android:drawablePadding="8dp"
              android:gravity="center_vertical"
              android:hint="@string/passowrdnew"
              android:inputType="textPassword"
              android:padding="10dp"
              android:singleLine="true"
              android:textColor="@color/white"
              android:textColorHint="@color/white"
              android:textSize="16sp" />

    <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

     <EditText
               android:id="@+id/passwordconfirm"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="5dp"
               android:background="@android:color/transparent"
               android:drawableLeft="@drawable/confirm_password"
               android:drawablePadding="8dp"
               android:gravity="center_vertical"
               android:hint="@string/confirmPassword"
               android:inputType="textPassword"
               android:padding="10dp"
               android:singleLine="true"
               android:textColor="@color/white"
               android:textColorHint="@color/white"
               android:textSize="16sp" />


    <Button
            android:id="@+id/confirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_background"
            android:padding="3dp"
            android:text="@string/confirm"
            android:textColor="@color/white_greyish"
            android:textSize="17sp"
            android:textStyle="bold"/>
</LinearLayout>